--- a/u-question-service/src/main/resources/application.properties
+++ b/u-question-service/src/main/resources/application.properties
@@ -5,6 +5,6 @@ server.port=8081
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/questionDb
 spring.datasource.username=postgres
-spring.datasource.password=mypass
+spring.datasource.password=*****
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
